使用 Colab 创建而成

--- a/CanadaFIRE.ipynb
+++ b/CanadaFIRE.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyME/0ncJZIHSnxjso8mzbUA",
+      "authorship_tag": "ABX9TyNg4e+zxKjREKdzzdBDfpfU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,6 +53,9 @@
         "3. 以统计学概率为依据\n",
         "4. 具备较高的数学、金融和计算机知识\n",
         "5. 不符合以上条件者，建议离开\n",
+        "\n",
+        "---\n",
+        "\n",
         "### 财务\n",
         "\n",
         "#### 购买美国分红ETF\n",
@@ -76,6 +79,38 @@
         "\n",
         "##### 下面挑几个高分红ETF来解释下\n",
         "\n",
+        "---\n",
+        "\n",
+        "### 税务\n",
+        "\n",
+        "#### 加拿大税务的优势\n",
+        "1. 低Captital Gain\n",
+        "2. 低公司税\n",
+        "3. 没有遗产税\n",
+        "\n",
+        "#### 加拿大税务的劣势\n",
+        "1. 分红税高\n",
+        "2. 个人边际税率太高\n",
+        "3. RRSP提出来的时间问题\n",
+        "\n",
+        "#### 为什么如果拿美国ETF的分红的话，不适合在加拿大退休\n",
+        "\n",
+        "1. 加拿大的分红有两种eligible和non-eligible\n",
+        "2. eligible dividends适用于加拿大本地企业的分红，因为他们已经交过加拿大的税了，所以在收到的时候可以用较优惠的税率计算个人税率\n",
+        "3. 美国的etf的分红收入是non-eligible的分红，可以申请Foregin Tax Credit但是不能申请Canada Dividend Tax Credit. 也就是说可以把美国证的那15%的税抵掉，因为加拿大和美国有税务条约，这样可以避免双重征税。但是，抵完这15%之后，剩下的就要加入当年的收入了，可以被征收最高55%的边际税率。\n",
+        "4. 这个税率相当高，其他国家的税率远比这个低。\n",
+        "\n",
+        "两个例子：\n",
+        "1. 美国\n",
+        "2. 日本\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 存多少钱够\n",
+        "\n",
+        "---\n",
         "\n",
         "### 目的地\n",
         "\n",
